refactor: update section titles from qualitative to quantitative results

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
   </section>
   <!-- End paper abstract -->
 
-  <!-- Qualitative results -->
+  <!-- Quantitative results -->
   <section class="section">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column">
-          <h2 class="title">Qualitative Results</h2>
+          <h2 class="title">Quantitative Results</h2>
           <div class="cis-centered">
             <figure class="has-text-justified">
               <img src="static/images/success_rate.svg" alt="Success Rate">
@@ -255,7 +255,7 @@
       </div>
     </div>
   </section>
-  <!-- End qualitative results -->
+  <!-- End Quantitative results -->
 
   <!-- Paper acknowledgment -->
   <section class="section hero">
