--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <sup>4</sup> College of Engineering, Peking University
               </span>
               <span class="eql-cntrb"><small><br /><sup>*</sup> Equal Contributor</small></span>
-              <span class="eql-cntrb"><small><br /><sup>✉</sup> Corresponding Contributor</small></span>
+              <span class="eql-cntrb"><small><br /><sup>✉️</sup> Corresponding Contributor</small></span>
             </div>
 
             <div class="column has-text-centered">
@@ -184,6 +184,34 @@
     </div>
   </section>
   <!-- End paper abstract -->
+
+  <!-- B* method -->
+  <section class="section">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column">
+          <h2 class="title">B* Method</h2>
+          <div class="content has-text-justified">
+            <p>Our B* method is a novel optimization framework for determining the optimal base placement that unifies
+              multiple objectives without relying on pre-computed databases. B* addresses this inherently non-convex
+              problem via a two-layer hierarchical approach: The outer layer systematically manages terminal constraints
+              through progressively tightening them, particularly the base mobility constraint, enabling feasible
+              initialization and broad solution space exploration. Concurrently, the inner layer addresses the
+              non-convexities of each outer-layer subproblem by sequential local linearization, effectively transforming
+              the original problem into a tractable sequential linear programming (SLP). Comprehensive evaluations across
+              multiple robot platforms and task complexities demonstrate the effectiveness of B*: it achieves solution
+              optimality five orders of magnitude better than sampling-based approaches while maintaining perfect success
+              rates, all with reduced computational overhead. Operating directly in configuration space, B* not only
+              solves the base placement problem but also enables simultaneous path planning with customizable optimization
+              criteria, making it a versatile framework for various robotic motion planning challenges. B* serves as a
+              crucial initialization tool for robotic applications, effectively bridging the gap between theoretical motion
+              planning and practical deployment where feasible trajectory existence is fundamental.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End B* method -->
 
   <!-- Quantitative results -->
   <section class="section">
