refactor: improve mathematical notation clarity in index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 \textit{SE}(2)\)</li>
               <li>The corresponding feasible joint configurations
                 \(\boldsymbol{q}^{m}_{1:t}=[\boldsymbol{q}_{1},\boldsymbol{q}_{2},\cdots,\boldsymbol{q}_{t}]\in\mathbb{R}^{t\times
-                n}\), where \(n\) is the degrees of freedom (DoFs) of the manipulator. </li>
+                n}\), where \(n\) is the DoFs of the manipulator. </li>
             </ol>
 
             <p class="math-content">
@@ -221,7 +221,7 @@
             </p>
 
             <p class="math-content">
-              \psi(\boldsymbol{q}^b, \boldsymbol{q}^m_{i}) = \boldsymbol{x}_i,\quad i = 1, 2, \ldots, t,
+              \[\psi(\boldsymbol{q}^b, \boldsymbol{q}^m_{i}) = \boldsymbol{x}_i,\quad i = 1, 2, \ldots, t,\]
             </p>
             <p>where \(\psi(\cdot)\) is the forward kinematics function.</p>
           </div>
