refactor: enhance mathematical clarity in index.html by bolding key terms and adding reference note

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </ol>
 
             <p class="math-content">
-              This formulation not only solves the base placement problem but also enables simultaneous path planning.
+              This formulation not only solves the \textbf{base placement} problem but also enables simultaneous \textbf{path planning}.
               Primarily, these configurations should reach each target pose \(\boldsymbol{x}_i\), imposing
               equality constraints:
             </p>
@@ -224,6 +224,7 @@
               \[\psi(\boldsymbol{q}^b, \boldsymbol{q}^m_{i}) = \boldsymbol{x}_i,\quad i = 1, 2, \ldots, t,\]
             </p>
             <p>where \(\psi(\cdot)\) is the forward kinematics function.</p>
+            <p>For more details, please refer to the paper.</p>
           </div>
         </div>
       </div>
