fix: correct HTML tags for bolding key terms in mathematical content

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </ol>
 
             <p class="math-content">
-              This formulation not only solves the \textbf{base placement} problem but also enables simultaneous \textbf{path planning}.
+              This formulation not only solves the <b>base placement<b> problem but also enables simultaneous <b>path planning<b>.
               Primarily, these configurations should reach each target pose \(\boldsymbol{x}_i\), imposing
               equality constraints:
             </p>
