refactor: enhance B* method section by adding justification class and new subsection title

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="column">
           <h2 class="title">B* Method</h2>
           <h3 class="subsection-title">Problem Formulation</h3>
-          <div class="content">
+          <div class="content has-text-justified">
             <p class="math-content">
               For fixed-base manipulators, we formulate the base placement challenge as an optimization problem.
               Consider an ordered sequence of desired end-effector poses in \(\textit{SE}(3)\):
@@ -209,7 +209,7 @@
 
             <ol>
               <li>The optimal base placement \(\boldsymbol{q}^b=[x^{b},y^{b},\theta^{b}]^{\mathsf{T}}\in
-                \textit{SE}(2)\)</li>
+                \textit{SE}(2)\).</li>
               <li>The corresponding feasible joint configurations
                 \(\boldsymbol{q}^{m}_{1:t}=[\boldsymbol{q}_{1},\boldsymbol{q}_{2},\cdots,\boldsymbol{q}_{t}]\in\mathbb{R}^{t\times
                 n}\), where \(n\) is DoF of the manipulator.</li>
@@ -255,6 +255,7 @@
               For a more detailed analysis and complete methodology, please refer to our paper.
             </p>
           </div>
+          <h3 class="subsection-title">Two-Layer Optimization of B*</h3>
         </div>
       </div>
     </div>
