refactor: update subsection titles to h2 for consistency and enhance acknowledgment section with project support details

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column">
           <h2 class="title">B* Method</h2>
-          <h3 class="subsection-title">Problem Formulation</h3>
+          <h2 class="subsection-title">Problem Formulation</h2>
           <div class="content has-text-justified">
             <p class="math-content">
               For fixed-base manipulators, we formulate the base placement challenge as an optimization problem.
@@ -200,7 +200,7 @@
 
             <p class="math-content">
               \[\boldsymbol{x}_{1:t} =
-              [\boldsymbol{x}_{1},\boldsymbol{x}_{2},\cdots,\boldsymbol{x}_{t}]\in\mathbb{R}^{t\times 6}\]
+              [\boldsymbol{x}_{1},\boldsymbol{x}_{2},\cdots,\boldsymbol{x}_{t}]\in\mathbb{R}^{t\times 6}.\]
             </p>
 
             <p class="math-content">
@@ -255,7 +255,7 @@
               For a more detailed analysis and complete methodology, please refer to our paper.
             </p>
           </div>
-          <h3 class="subsection-title">Two-Layer Optimization of B*</h3>
+          <h2 class="subsection-title">Two-Layer Optimization of B*</h2>
         </div>
       </div>
     </div>
@@ -341,7 +341,12 @@
         <div class="column">
           <h2 class="title is-3">Acknowledgment</h2>
           <div class="content has-text-justified">
-            <p>We thank Dr. Chi Zhang (BIGAI), Yuyang Li (PKU), and Youqian Peng (PKU) for useful discussions.</p>
+            <p>We thank Dr. Chi Zhang (BIGAI), Yuyang Li (PKU), and Youqian Peng (PKU) for useful discussions. This work
+              is supported in part by the National Science and Technology Major Project (2022ZD0114900), the National
+              Natural Science Foundation of China (62376031), the Beijing Nova Program, the State Key Lab of General AI
+              at Peking University, the PKU-BingJi Joint Laboratory for Artificial Intelligence, and the National
+              Comprehensive Experimental Base for Governance of Intelligent Society, Wuhan East Lake High-Tech
+              Development Zone.</p>
           </div>
         </div>
       </div>
