--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column">
           <h2 class="title">B* Method</h2>
-          <h2 class="subsection-title">Problem Formulation</h2>
+          <h2 class="subsection-title"><b>Problem Formulation</b></h2>
           <div class="content has-text-justified">
             <p class="math-content">
               For fixed-base manipulators, we formulate the base placement challenge as an optimization problem.
@@ -255,7 +255,7 @@
               For a more detailed analysis and complete methodology, please refer to our paper.
             </p>
           </div>
-          <h2 class="subsection-title">Two-Layer Optimization of B*</h2>
+          <h2 class="subsection-title"><b>Two-Layer Optimization of B*</b></h2>
         </div>
       </div>
     </div>
