--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </p>
 
             <p class="math-content">
-              \[\psi(\boldsymbol{q}^b, \boldsymbol{q}^m_{i}) = \boldsymbol{x}_i,\quad i = 1, 2, \ldots, t,\]
+              \[\psi(\boldsymbol{q}^b, \boldsymbol{q}^m_{i}) = \boldsymbol{x}_i,\]
             </p>
 
             <p class="math-content">
@@ -355,6 +355,28 @@
       </div>
   </section>
   <!-- End B* method -->
+
+  <!-- Qualitative results -->
+  <section class="section">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column">
+          <h2 class="title">Qualitative Results</h2>
+          <div class="column is-full-width">
+            <h2 class="subsection-title">Optimization Process of B*</h2>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                src="https://player.vimeo.com/video/907222643?h=9793e630b0&badge=0&autopause=0&player_id=0&app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                title="Supplementary Video"></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Qualitative results -->
 
   <!-- Quantitative results -->
   <section class="section">
