fix: emphasize base movement penalty in mathematical content for clarity

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </p>
 
                 <p class="math-content">
-                  To ensure convergence to a fixed base configuration, we introduce a base movement penalty with an
+                  To ensure convergence to a fixed base configuration, we introduce a <b>base movement penalty</b> with an
                   iteration-dependent coefficient \(\mu(j)\) that increases with outer loop iteration \(j\) The modified
                   objective function \(f'(\boldsymbol{q}^b_{1:t},\boldsymbol{q}^{m}_{1:t};\mu(j))\) becomes:
                 </p>
