fix: improve formatting of base movement penalty explanation and adjust video section structure for clarity

--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
                 </p>
 
                 <p class="math-content">
-                  To ensure convergence to a fixed base configuration, we introduce a <b>base movement penalty</b> with an
+                  To ensure convergence to a fixed base configuration, we introduce a <b>base movement penalty</b> with
+                  an
                   iteration-dependent coefficient \(\mu(j)\) that increases with outer loop iteration \(j\) The modified
                   objective function \(f'(\boldsymbol{q}^b_{1:t},\boldsymbol{q}^{m}_{1:t};\mu(j))\) becomes:
                 </p>
@@ -362,16 +363,13 @@
       <div class="columns is-centered has-text-centered">
         <div class="column">
           <h2 class="title">Qualitative Results</h2>
-          <div class="column is-full-width">
-            <h2 class="subsection-title">Optimization Process of B*</h2>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-                src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
-                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
-                style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                title="Supplementary Video"></iframe>
-            </div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
+          <h2 class="subsection-title">Optimization Process of B*</h2>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+              src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
+              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+              style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
           </div>
+          <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
       </div>
     </div>
