feat: add quantitative evaluation results section with detailed experiment description

--- a/index.html
+++ b/index.html
@@ -382,6 +382,15 @@
       <div class="columns is-centered has-text-centered">
         <div class="column">
           <h2 class="title">Quantitative Results</h2>
+          <div class="content has-text-justified">
+            <p class="math-content">
+              We conducted extensive quantitative evaluations comparing B* against sampling-based approaches across
+              different complexity levels <i>l</i>, where each level <i>l</i> = 1,...,6 corresponds to
+              2<sup><i>l</i></sup> via points on the path. The experiments were performed on four robot platforms
+              equipped with 6- or 7-DoF manipulators, totaling 2,400 test cases. The followings are the results:
+            </p>
+          </div>
+
           <div class="cis-centered">
             <figure class="has-text-justified">
               <img src="static/images/success_rate.svg" alt="Success Rate">
