--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@
           <div class="content has-text-justified">
             <p class="math-content">
               We conducted extensive quantitative evaluations comparing B* against sampling-based approaches across
-              different complexity levels <i>l</i>, where each level <i>l</i> = 1,...,6 corresponds to
-              2<sup><i>l</i></sup> via points on the path. The experiments were performed on four robot platforms
-              equipped with 6- or 7-DoF manipulators, totaling 2,400 test cases. The followings are the results:
+              different complexity levels \(l\), where each level (\(l=1,\ldots,6\)) corresponds to
+              \(\2^l) via points on the path. The experiments were performed on four robot platforms
+              equipped with 6- or 7-DoF manipulators, totaling <b>2,400 test cases</b>. The followings are the results:
             </p>
           </div>
 
