fix: correct mathematical notation in quantitative evaluations section for clarity

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <p class="math-content">
               We conducted extensive quantitative evaluations comparing B* against sampling-based approaches across
               different complexity levels \(l\), where each level (\(l=1,\ldots,6\)) corresponds to
-              \(\2^l) via points on the path. The experiments were performed on four robot platforms
+              \(\2^l\) via points on the path. The experiments were performed on four robot platforms
               equipped with 6- or 7-DoF manipulators, totaling <b>2,400 test cases</b>. The followings are the results:
             </p>
           </div>
