fix: correct capitalization in description of inner layer with sequential linearization

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 </p>
 
               </li>
-              <li><b>Inner Layer with sequential linearization:</b> B* addresses the non-convexities of each outer-layer
+              <li><b>Inner layer with sequential linearization:</b> B* addresses the non-convexities of each outer-layer
                 subproblem by sequential local linearization within trust regions.
                 <p class="math-content">
                   Given a non-convex function \(\phi(x)\), we construct its convex approximation \(\phi_c(x)\) through
