fix: update video section title for clarity and improve layout

--- a/index.html
+++ b/index.html
@@ -140,14 +140,13 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column">
-          <h2 class="title">Qualitative Results</h2>
-          <h2 class="subsection-title">Optimization Process of B*</h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
               src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
               frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
               style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
           </div>
           <script src="https://player.vimeo.com/api/player.js"></script>
+          <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm</h2>
         </div>
       </div>
     </div>
