--- a/index.html
+++ b/index.html
@@ -138,15 +138,27 @@
   <!-- Teaser video-->
   <section class="hero teaser">
     <div class="container is-max-desktop">
-      <div class="columns is-centered has-text-centered">
-        <div class="column">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-              src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
-              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
-              style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
+      <div class="hero-body">
+        <video poster="" id="tree" autoplay controls muted loop height="100%">
+          <!-- Your video here -->
+          <source src="static/videos/motivation.mp4" type="video/mp4" />
+        </video>
+        <h2 class="subsection-title">
+          Proper Base Placement is Crucial for Task Execution Feasibility
+        </h2>
+      </div>
+      <div class="container is-max-desktop">
+        <div class="columns is-centered has-text-centered">
+          <div class="column">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
+            </h2>
           </div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
-          <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm</h2>
         </div>
       </div>
     </div>
