--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
           </h2>
           <div class="cis-centered">
             <figure class="has-text-justified">
-              <img src="static/images/teaser_website.svg" alt="Teaser Image">
+              <img src="static/images/teaser_website.svg" alt="Teaser Image"
+                style="width: 100%; height: auto; display: block;">
               <figcaption class="subtitle is-6" style="margin-bottom: 3rem">
                 <b>Varied optimal base placement across robotic platforms and task requirements.</b> To demonstrate
                 this, we present several examples using two widely adopted manipulators---the KUKA iiwa (left) and
