--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
         <div class="column">
           <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
           </h2>
-          <div class="cis-centered">
-            <figure class="has-text-justified">
+          <div class="cis-centered"
+            style="width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
+            <figure class="has-text-justified" style="width: 100%; margin: 0;">
               <img src="static/images/teaser_website.svg" alt="Teaser Image"
                 style="width: 100%; height: auto; display: block;">
               <figcaption class="subtitle is-6" style="margin-bottom: 3rem">
