fix: simplify teaser image container styling for better layout

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </h2>
           <div class="cis-centered"
             style="width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
-            <figure class="has-text-justified" style="width: 100%; margin: 0;">
+            <figure class="has-text-justified">
               <img src="static/images/teaser_website.svg" alt="Teaser Image"
                 style="width: 100%; height: auto; display: block;">
               <figcaption class="subtitle is-6" style="margin-bottom: 3rem">
